modifique las fotos

--- a/html/cuatro.html
+++ b/html/cuatro.html
@@ -4,7 +4,7 @@
 	<title> Esta es mi pagina de Referencias Personales</title>
 	<link rel="stylesheet" type="text/css" href="/conta/css/estilos.css">
 </head>
-<body background="E:\conta\imagenes\fondito7.gif">
+<body background="\conta\imagenes\fondito7.gif">
 	<center>
 	<h1><font color="00FBFF" face="Algerian">Referencias</font></h1>
 	<h1><font color="00FBFF" face="Algerian">Diego Benjamin García Ambrocio</font></h1>
@@ -23,11 +23,11 @@
     	<li><font color="00FBFF" face="Algerian">Dirección	: El cuchitril 3-87 zona 3 Villa Nueva</font>
     </ul> 
 	<hr color="blue">
-	<h2><font color="FF0000" face="Times New Roman"><a href="E:\conta\index.html">Principal</a></h2> &nbsp;&nbsp;
-	<h2><font color="FF0000" face="Times New Roman"><a href="E:\conta\html\uno.html">Personales</a></h2> &nbsp;&nbsp;
-	<h2><font color="FF0000" face="Times New Roman"><a href="E:\conta\html\dos.html">Estudios</a></h2> &nbsp;&nbsp;
-	<h2><font color="FF0000" face="Times New Roman"><a href="E:\conta\html\tres.html">Capacitaciones</a></h2> &nbsp;&nbsp;
-	<h2><font color="FF0000" face="Times New Roman"><a href="E:\conta\html\cuatro.html">Referencias</a></h2> &nbsp;&nbsp;
+	<h2><font color="FF0000" face="Times New Roman"><a href="\conta\index.html">Principal</a></h2> &nbsp;&nbsp;
+	<h2><font color="FF0000" face="Times New Roman"><a href="\conta\html\uno.html">Personales</a></h2> &nbsp;&nbsp;
+	<h2><font color="FF0000" face="Times New Roman"><a href="\conta\html\dos.html">Estudios</a></h2> &nbsp;&nbsp;
+	<h2><font color="FF0000" face="Times New Roman"><a href="\conta\html\tres.html">Capacitaciones</a></h2> &nbsp;&nbsp;
+	<h2><font color="FF0000" face="Times New Roman"><a href="\conta\html\cuatro.html">Referencias</a></h2> &nbsp;&nbsp;
      
 </body>
 </html>
