--- a/html/principal.html
+++ b/html/principal.html
@@ -4,18 +4,18 @@
 	<title>pagina de propiedad mia.</title>
 	<link rel="stylesheet" type="text/css" href="css/estilos.css">
 </head>
-<body background="E:\conta\imagenes\fondito.gif">
+<body background="\conta\imagenes\fondito.gif">
 	<center>
 	<h1><font color="00FBFF" face="Algerian"><i>Hoja de vida</i></font></h1>
 	<h1><font color="00FBFF" face="Algerian"><i>Diego Benjamin García Ambrocio</i></font></h1>
-	<img src="E:\conta\imagenes\yo.jpg" width="175" height="275">
+	<img src="\conta\imagenes\yo.jpg" width="175" height="275">
 	<hr color="00FBFF">
 	</center>
 
-	<h2><font color="00FBFF" face="Castellar"><a href="E:\conta\html\uno.html">Personales</a></font></h2> &nbsp;&nbsp;
-	<h2><font color="00FBFF" face="Castellar"><a href="E:\conta\html\dos.html">Estudios</a></font></h2> &nbsp;&nbsp;
-	<h2><font color="00FBFF" face="Castellar"><a href="E:\conta\html\tres.html">Capacitaciones</a></font></h2> &nbsp;&nbsp;
-	<h2><font color="00FBFF" face="Castellar"><a href="E:\conta\html\cuatro.html">Referencias</a></font></h2> &nbsp;&nbsp;
+	<h2><font color="00FBFF" face="Castellar"><a href="\conta\html\uno.html">Personales</a></font></h2> &nbsp;&nbsp;
+	<h2><font color="00FBFF" face="Castellar"><a href="\conta\html\dos.html">Estudios</a></font></h2> &nbsp;&nbsp;
+	<h2><font color="00FBFF" face="Castellar"><a href="\conta\html\tres.html">Capacitaciones</a></font></h2> &nbsp;&nbsp;
+	<h2><font color="00FBFF" face="Castellar"><a href="\conta\html\cuatro.html">Referencias</a></font></h2> &nbsp;&nbsp;
 
 </body>
 </html>
