--- a/html/dos.html
+++ b/html/dos.html
@@ -4,7 +4,7 @@
 	<title> Esta es mi pagina de Estudios</title>
 	<link rel="stylesheet" type="text/css" href="/conta/css/estilos.css">
 </head>
-<body background="E:\conta\imagenes\fondito5.gif">
+<body background="\conta\imagenes\fondito5.gif">
 	<center>
 	<h1><font color="FF0000" face="Times New Roman">Estudios Escolares</font></h1>
 	<h1><font color="FF0000" face="Times New Roman">Diego Benjamin García Ambrocio</font></h1>
@@ -16,11 +16,11 @@
     <h2><font color="BD0000" face="Times New Roman">Carrera		: Instituto Profesional de Computación</h2>
     </center>
 
-	<h2><font color="FF0000" face="Times New Roman"><a href="E:\conta\index.html">Principal</a></font></h2> &nbsp;&nbsp;
-	<h2><font color="FF0000" face="Times New Roman"><a href="E:\conta\html\uno.html">Personales</a></font></h2> &nbsp;&nbsp;
-	<h2><font color="FF0000" face="Times New Roman"><a href="E:\conta\html\dos.html">Estudios</a></font></h2> &nbsp;&nbsp;
-	<h2><font color="FF0000" face="Times New Roman"><a href="E:\conta\html\tres.html">Capacitaciones</a></font></h2> &nbsp;&nbsp;
-	<h2><font color="FF0000" face="Times New Roman"><a href="E:\conta\html\cuatro.html">Referencias</a></font></h2> &nbsp;&nbsp;
+	<h2><font color="FF0000" face="Times New Roman"><a href="\conta\index.html">Principal</a></font></h2> &nbsp;&nbsp;
+	<h2><font color="FF0000" face="Times New Roman"><a href="\conta\html\uno.html">Personales</a></font></h2> &nbsp;&nbsp;
+	<h2><font color="FF0000" face="Times New Roman"><a href="\conta\html\dos.html">Estudios</a></font></h2> &nbsp;&nbsp;
+	<h2><font color="FF0000" face="Times New Roman"><a href="\conta\html\tres.html">Capacitaciones</a></font></h2> &nbsp;&nbsp;
+	<h2><font color="FF0000" face="Times New Roman"><a href="\conta\html\cuatro.html">Referencias</a></font></h2> &nbsp;&nbsp;
      
 </body>
 </html>
