--- a/html/uno.html
+++ b/html/uno.html
@@ -8,7 +8,7 @@
 	<center>
 	<h1><font color="00FBFF" face="Algerian">Información Personal</font></h1>
 	<h1><font color="00FBFF" face="Algerian">Diego Benjamin García Ambrocio</font></h1>
-	<img src="E:\conta\imagenes\yo.jpg" width="175" height="275">
+	<img src="\conta\imagenes\yo.jpg" width="175" height="275">
 	<hr color="00FBFF">
      
     <h2><font color="00FBFF" face="Times New Roman">Mis nombre		: Diego Benjamin</h2> 
@@ -17,10 +17,10 @@
     <h2><font color="00FBFF" face="Times New Roman">Teléfono		: 4278-7181</h2> 
     </center>
 
-	<h2><font color="00FBFF" face="Castellar"><a href="E:\conta\index.html">Principal</a></font></h2> &nbsp;&nbsp;
-	<h2><font color="00FBFF" face="Castellar"><a href="E:\conta\html\uno.html">Personales</a></font></h2> &nbsp;&nbsp;
-	<h2><font color="00FBFF" face="Castellar"><a href="E:\conta\html\dos.html">Estudios</a></font></h2> &nbsp;&nbsp;
-	<h2><font color="00FBFF" face="Castellar"><a href="E:\conta\html\tres.html">Capacitaciones</a></font></h2> &nbsp;&nbsp;
-	<h2><font color="00FBFF" face="Castellar"><a href="E:\conta\html\cuatro.html">Referencias</a></font></h2> &nbsp;&nbsp;    
+	<h2><font color="00FBFF" face="Castellar"><a href="\conta\index.html">Principal</a></font></h2> &nbsp;&nbsp;
+	<h2><font color="00FBFF" face="Castellar"><a href="\conta\html\uno.html">Personales</a></font></h2> &nbsp;&nbsp;
+	<h2><font color="00FBFF" face="Castellar"><a href="\conta\html\dos.html">Estudios</a></font></h2> &nbsp;&nbsp;
+	<h2><font color="00FBFF" face="Castellar"><a href="\conta\html\tres.html">Capacitaciones</a></font></h2> &nbsp;&nbsp;
+	<h2><font color="00FBFF" face="Castellar"><a href="\conta\html\cuatro.html">Referencias</a></font></h2> &nbsp;&nbsp;    
 </body>
 </html>
