--- a/html/dos.html
+++ b/html/dos.html
@@ -4,7 +4,7 @@
 	<title> Esta es mi pagina de Estudios</title>
 	<link rel="stylesheet" type="text/css" href="/conta/css/estilos.css">
 </head>
-<body background="\conta\imagenes\fondito5.gif">
+<body background="imagenes\fondito5.gif">
 	<center>
 	<h1><font color="FF0000" face="Times New Roman">Estudios Escolares</font></h1>
 	<h1><font color="FF0000" face="Times New Roman">Diego Benjamin García Ambrocio</font></h1>
