--- a/html/tres.html
+++ b/html/tres.html
@@ -4,7 +4,7 @@
 	<title> Esta es mi pagina de Capacitaciones</title>
 	<link rel="stylesheet" type="text/css" href="/conta/css/estilos.css">
 </head>
-<body background="\conta\imagenes\fondito6.gif">
+<body background="imagenes\fondito6.gif">
 	<h1><font color="000EBD" face="Castellar">Capacitaciones</font></h1>
 	<h1><font color="000EBD" face="Castellar">Diego Benjamin García Ambrocio</font></h1>
 
