--- a/html/uno.html
+++ b/html/uno.html
@@ -4,7 +4,7 @@
 	<title> Esta es mi pagina de Información Personal</title>
 	<link rel="stylesheet" type="text/css" href="/conta/css/estilos.css">
 </head>
-<body background-size: 100% background="E:\conta\imagenes\fondito4.gif" >
+<body background-size: 100% background="imagenes\fondito4.gif" >
 	<center>
 	<h1><font color="00FBFF" face="Algerian">Información Personal</font></h1>
 	<h1><font color="00FBFF" face="Algerian">Diego Benjamin García Ambrocio</font></h1>
