--- a/html/dos.html
+++ b/html/dos.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title> Esta es mi pagina de Estudios</title>
-	<link rel="stylesheet" type="text/css" href="/conta/css/estilos.css">
+	<link rel="stylesheet" type="text/css" href="css/estilos.css">
 </head>
 <body background="imagenes\fondito5.gif">
 	<center>
