--- a/html/cuatro.html
+++ b/html/cuatro.html
@@ -4,7 +4,7 @@
 	<title> Esta es mi pagina de Referencias Personales</title>
 	<link rel="stylesheet" type="text/css" href="css/estilos.css">
 </head>
-<body background="imagenes\fondito7.gif">
+<body background="\imagenes\fondito7.gif">
 	<center>
 	<h1><font color="00FBFF" face="Algerian">Referencias</font></h1>
 	<h1><font color="00FBFF" face="Algerian">Diego Benjamin García Ambrocio</font></h1>
