--- a/html/principal.html
+++ b/html/principal.html
@@ -4,11 +4,11 @@
 	<title>pagina de propiedad mia.</title>
 	<link rel="stylesheet" type="text/css" href="css/estilos.css">
 </head>
-<body background="imagenes\fondito.gif">
+<body background="\imagenes\fondito.gif">
 	<center>
 	<h1><font color="00FBFF" face="Algerian"><i>Hoja de vida</i></font></h1>
 	<h1><font color="00FBFF" face="Algerian"><i>Diego Benjamin García Ambrocio</i></font></h1>
-	<img src="imagenes\yo.jpg" width="175" height="275">
+	<img src="\imagenes\yo.jpg" width="175" height="275">
 	<hr color="00FBFF">
 	</center>
 
