--- a/html/principal.html
+++ b/html/principal.html
@@ -4,15 +4,15 @@
 	<title>pagina de propiedad mia.</title>
 	<link rel="stylesheet" type="text/css" href="css/estilos.css">
 </head>
-<body background="fondito.gif">
+<body background="pink">
 	<center>
 	<h1><font color="00FBFF" face="Algerian"><i>Hoja de vida</i></font></h1>
 	<h1><font color="00FBFF" face="Algerian"><i>Diego Benjamin García Ambrocio</i></font></h1>
-	<img src="yo.jpg" width="175" height="275">
+	<img src="https://imgs.search.brave.com/nh4C3e6SIOZoU4gLDciZXEw5eR2sWwqJw10kho8_SVk/rs:fit:500:375:1/g:ce/aHR0cHM6Ly9wYnMu/dHdpbWcuY29tL3By/b2ZpbGVfaW1hZ2Vz/LzIyNDE2Mjg0NTEv/aGFtbS5qcGc" width="175" height="275">
 	<hr color="00FBFF">
 	</center>
 
-	<h2><font color="00FBFF" face="Castellar"><a href="\conta\html\uno.html">Personales</a></font></h2> &nbsp;&nbsp;
+	<h2><font color="00FBFF" face="Castellar"><a href="uno.html">Personales</a></font></h2> &nbsp;&nbsp;
 	<h2><font color="00FBFF" face="Castellar"><a href="\conta\html\dos.html">Estudios</a></font></h2> &nbsp;&nbsp;
 	<h2><font color="00FBFF" face="Castellar"><a href="\conta\html\tres.html">Capacitaciones</a></font></h2> &nbsp;&nbsp;
 	<h2><font color="00FBFF" face="Castellar"><a href="\conta\html\cuatro.html">Referencias</a></font></h2> &nbsp;&nbsp;
