--- a/html/principal.html
+++ b/html/principal.html
@@ -4,7 +4,7 @@
 	<title>pagina de propiedad mia.</title>
 	<link rel="stylesheet" type="text/css" href="css/estilos.css">
 </head>
-<body background="red">
+<body bgcolor="red">
 	<center>
 	<h1><font color="00FBFF" face="Algerian"><i>Hoja de vida</i></font></h1>
 	<h1><font color="00FBFF" face="Algerian"><i>Diego Benjamin García Ambrocio</i></font></h1>
