--- a/html/principal.html
+++ b/html/principal.html
@@ -13,9 +13,9 @@
 	</center>
 
 	<h2><font color="00FBFF" face="Castellar"><a href="uno.html">Personales</a></font></h2> &nbsp;&nbsp;
-	<h2><font color="00FBFF" face="Castellar"><a href="\conta\html\dos.html">Estudios</a></font></h2> &nbsp;&nbsp;
-	<h2><font color="00FBFF" face="Castellar"><a href="\conta\html\tres.html">Capacitaciones</a></font></h2> &nbsp;&nbsp;
-	<h2><font color="00FBFF" face="Castellar"><a href="\conta\html\cuatro.html">Referencias</a></font></h2> &nbsp;&nbsp;
+	<h2><font color="00FBFF" face="Castellar"><a href="dos.html">Estudios</a></font></h2> &nbsp;&nbsp;
+	<h2><font color="00FBFF" face="Castellar"><a href="tres.html">Capacitaciones</a></font></h2> &nbsp;&nbsp;
+	<h2><font color="00FBFF" face="Castellar"><a href="cuatro.html">Referencias</a></font></h2> &nbsp;&nbsp;
 
 </body>
 </html>
