--- a/html/uno.html
+++ b/html/uno.html
@@ -4,11 +4,11 @@
 	<title> Esta es mi pagina de Información Personal</title>
 	<link rel="stylesheet" type="text/css" href="/conta/css/estilos.css">
 </head>
-<body background-size: 100% background="imagenes\fondito4.gif" >
+<body background-size: 100% background="fondito4.gif" >
 	<center>
 	<h1><font color="00FBFF" face="Algerian">Información Personal</font></h1>
 	<h1><font color="00FBFF" face="Algerian">Diego Benjamin García Ambrocio</font></h1>
-	<img src="\conta\imagenes\yo.jpg" width="175" height="275">
+	<img src="yo.jpg" width="175" height="275">
 	<hr color="00FBFF">
      
     <h2><font color="00FBFF" face="Times New Roman">Mis nombre		: Diego Benjamin</h2> 
@@ -17,10 +17,10 @@
     <h2><font color="00FBFF" face="Times New Roman">Teléfono		: 4278-7181</h2> 
     </center>
 
-	<h2><font color="00FBFF" face="Castellar"><a href="\conta\index.html">Principal</a></font></h2> &nbsp;&nbsp;
-	<h2><font color="00FBFF" face="Castellar"><a href="\conta\html\uno.html">Personales</a></font></h2> &nbsp;&nbsp;
-	<h2><font color="00FBFF" face="Castellar"><a href="\conta\html\dos.html">Estudios</a></font></h2> &nbsp;&nbsp;
-	<h2><font color="00FBFF" face="Castellar"><a href="\conta\html\tres.html">Capacitaciones</a></font></h2> &nbsp;&nbsp;
-	<h2><font color="00FBFF" face="Castellar"><a href="\conta\html\cuatro.html">Referencias</a></font></h2> &nbsp;&nbsp;    
+	<h2><font color="00FBFF" face="Castellar"><a href="index.html">Principal</a></font></h2> &nbsp;&nbsp;
+	<h2><font color="00FBFF" face="Castellar"><a href="uno.html">Personales</a></font></h2> &nbsp;&nbsp;
+	<h2><font color="00FBFF" face="Castellar"><a href="dos.html">Estudios</a></font></h2> &nbsp;&nbsp;
+	<h2><font color="00FBFF" face="Castellar"><a href="tres.html">Capacitaciones</a></font></h2> &nbsp;&nbsp;
+	<h2><font color="00FBFF" face="Castellar"><a href="cuatro.html">Referencias</a></font></h2> &nbsp;&nbsp;    
 </body>
 </html>
