--- a/html/dos.html
+++ b/html/dos.html
@@ -4,7 +4,7 @@
 	<title> Esta es mi pagina de Estudios</title>
 	<link rel="stylesheet" type="text/css" href="css/estilos.css">
 </head>
-<body background="imagenes\fondito5.gif">
+<body background="https://imgs.search.brave.com/MoHdC0LzgnCj8aCxEW1B3EeQqUKmnY6YmOs0By3WhIA/rs:fit:1024:768:1/g:ce/aHR0cDovLzEuYnAu/YmxvZ3Nwb3QuY29t/Ly1fMHpOTnRGZU1J/VS9Uc1VycVBwd0FE/SS9BQUFBQUFBQUF4/by83MGZZY2lBMnRZ/VS9zMTYwMC9TcGlk/ZXJtYW5fRm9uZG9z/LWRlLVBhbnRhbGxh/LmpwZw">
 	<center>
 	<h1><font color="FF0000" face="Times New Roman">Estudios Escolares</font></h1>
 	<h1><font color="FF0000" face="Times New Roman">Diego Benjamin García Ambrocio</font></h1>
@@ -16,11 +16,11 @@
     <h2><font color="BD0000" face="Times New Roman">Carrera		: Instituto Profesional de Computación</h2>
     </center>
 
-	<h2><font color="FF0000" face="Times New Roman"><a href="\conta\index.html">Principal</a></font></h2> &nbsp;&nbsp;
-	<h2><font color="FF0000" face="Times New Roman"><a href="\conta\html\uno.html">Personales</a></font></h2> &nbsp;&nbsp;
-	<h2><font color="FF0000" face="Times New Roman"><a href="\conta\html\dos.html">Estudios</a></font></h2> &nbsp;&nbsp;
-	<h2><font color="FF0000" face="Times New Roman"><a href="\conta\html\tres.html">Capacitaciones</a></font></h2> &nbsp;&nbsp;
-	<h2><font color="FF0000" face="Times New Roman"><a href="\conta\html\cuatro.html">Referencias</a></font></h2> &nbsp;&nbsp;
+	<h2><font color="FF0000" face="Times New Roman"><a href="index.html">Principal</a></font></h2> &nbsp;&nbsp;
+	<h2><font color="FF0000" face="Times New Roman"><a href="uno.html">Personales</a></font></h2> &nbsp;&nbsp;
+	<h2><font color="FF0000" face="Times New Roman"><a href="dos.html">Estudios</a></font></h2> &nbsp;&nbsp;
+	<h2><font color="FF0000" face="Times New Roman"><a href="tres.html">Capacitaciones</a></font></h2> &nbsp;&nbsp;
+	<h2><font color="FF0000" face="Times New Roman"><a href="cuatro.html">Referencias</a></font></h2> &nbsp;&nbsp;
      
 </body>
 </html>
