--- a/html/uno.html
+++ b/html/uno.html
@@ -4,7 +4,7 @@
 	<title> Esta es mi pagina de Información Personal</title>
 	<link rel="stylesheet" type="text/css" href="/conta/css/estilos.css">
 </head>
-<body background-size: 100% background="fondito4.gif" >
+<body background-size: 100% background="https://imgs.search.brave.com/t5gTApndzcjEu7k99znmXm-63AvgWf9rKy4bTu27uU8/rs:fit:1200:1200:1/g:ce/aHR0cDovL3d3dy5l/bGd1aWxsZW1vbGEu/Y29tL2ltZy9FeGN1/cnNpb25hbGFTdHVw/YWRlS2FsYWNoYWty/YWVuVmVsZXpfMTFG/RDUvRFNDXzE1MjMz/X2xyLmpwZw" >
 	<center>
 	<h1><font color="00FBFF" face="Algerian">Información Personal</font></h1>
 	<h1><font color="00FBFF" face="Algerian">Diego Benjamin García Ambrocio</font></h1>
