--- a/html/tres.html
+++ b/html/tres.html
@@ -4,7 +4,7 @@
 	<title> Esta es mi pagina de Capacitaciones</title>
 	<link rel="stylesheet" type="text/css" href="/conta/css/estilos.css">
 </head>
-<body background="imagenes\fondito6.gif">
+<body background="https://imgs.search.brave.com/s6OKAaBGNRTNwZXP2X-I65Uujqv-u8LWLb7cBGj2roU/rs:fit:1200:1200:1/g:ce/aHR0cHM6Ly9pbWFn/ZXMuYWxwaGFjb2Rl/cnMuY29tLzI1OC8y/NTgyMTEuanBn">
 	<h1><font color="000EBD" face="Castellar">Capacitaciones</font></h1>
 	<h1><font color="000EBD" face="Castellar">Diego Benjamin García Ambrocio</font></h1>
 
@@ -12,11 +12,11 @@
     <h2><font color="000EBD" face="Castellar">Capacitacion de la SAT : Regimen sobre los ingresos de actividaes lucrativas</font></h2> 
     <h2><font color="000EBD" face="Castellar">Capacitacion de la SAT : Regimen sobre utilidades de rentsas de actividades lucrativas</font></h2> 
 	
-	<h2><font color="FF0000" face="Times New Roman"><a href="\conta\index.html">Principal</a></font></h2> &nbsp;&nbsp;
-	<h2><font color="FF0000" face="Times New Roman"><a href="\conta\html\uno.html">Personales</a></font></h2> &nbsp;&nbsp;
-	<h2><font color="FF0000" face="Times New Roman"><a href="\conta\html\dos.html">Estudios</a></font></h2> &nbsp;&nbsp;
-	<h2><font color="FF0000" face="Times New Roman"><a href="\conta\html\tres.html">Capacitaciones</a></font></h2> &nbsp;&nbsp;
-	<h2><font color="FF0000" face="Times New Roman"><a href="\conta\html\cuatro.html">Referencias</a></font></h2> &nbsp;&nbsp;
+	<h2><font color="FF0000" face="Times New Roman"><a href="index.html">Principal</a></font></h2> &nbsp;&nbsp;
+	<h2><font color="FF0000" face="Times New Roman"><a href="uno.html">Personales</a></font></h2> &nbsp;&nbsp;
+	<h2><font color="FF0000" face="Times New Roman"><a href="dos.html">Estudios</a></font></h2> &nbsp;&nbsp;
+	<h2><font color="FF0000" face="Times New Roman"><a href="tres.html">Capacitaciones</a></font></h2> &nbsp;&nbsp;
+	<h2><font color="FF0000" face="Times New Roman"><a href="cuatro.html">Referencias</a></font></h2> &nbsp;&nbsp;
      
 
 </body>
