--- a/html/cuatro.html
+++ b/html/cuatro.html
@@ -4,7 +4,7 @@
 	<title> Esta es mi pagina de Referencias Personales</title>
 	<link rel="stylesheet" type="text/css" href="css/estilos.css">
 </head>
-<body background="\imagenes\fondito7.gif">
+<body background="https://imgs.search.brave.com/2vRfD2Fqw4LGmUOY2Hi_774Zmt0VtHoruUAvTvYAB-8/rs:fit:1200:1000:1/g:ce/aHR0cDovLzEuYnAu/YmxvZ3Nwb3QuY29t/Ly0zWnAtR0VfYXdI/ay9VUGdCaVhEUENM/SS9BQUFBQUFBQXpx/QS91WEtsNVQ0VXp2/cy9zMTYwMC9MYS1M/dW5hLWRlc2RlLWVs/LUVzcGFjaW9fRm9u/ZG9zLUhELWRlbC1V/bml2ZXJzby5qcGc">
 	<center>
 	<h1><font color="00FBFF" face="Algerian">Referencias</font></h1>
 	<h1><font color="00FBFF" face="Algerian">Diego Benjamin García Ambrocio</font></h1>
@@ -23,11 +23,11 @@
     	<li><font color="00FBFF" face="Algerian">Dirección	: El cuchitril 3-87 zona 3 Villa Nueva</font>
     </ul> 
 	<hr color="blue">
-	<h2><font color="FF0000" face="Times New Roman"><a href="\conta\index.html">Principal</a></h2> &nbsp;&nbsp;
-	<h2><font color="FF0000" face="Times New Roman"><a href="\conta\html\uno.html">Personales</a></h2> &nbsp;&nbsp;
-	<h2><font color="FF0000" face="Times New Roman"><a href="\conta\html\dos.html">Estudios</a></h2> &nbsp;&nbsp;
-	<h2><font color="FF0000" face="Times New Roman"><a href="\conta\html\tres.html">Capacitaciones</a></h2> &nbsp;&nbsp;
-	<h2><font color="FF0000" face="Times New Roman"><a href="\conta\html\cuatro.html">Referencias</a></h2> &nbsp;&nbsp;
+	<h2><font color="FF0000" face="Times New Roman"><a href="index.html">Principal</a></h2> &nbsp;&nbsp;
+	<h2><font color="FF0000" face="Times New Roman"><a href="uno.html">Personales</a></h2> &nbsp;&nbsp;
+	<h2><font color="FF0000" face="Times New Roman"><a href="dos.html">Estudios</a></h2> &nbsp;&nbsp;
+	<h2><font color="FF0000" face="Times New Roman"><a href="tres.html">Capacitaciones</a></h2> &nbsp;&nbsp;
+	<h2><font color="FF0000" face="Times New Roman"><a href="cuatro.html">Referencias</a></h2> &nbsp;&nbsp;
      
 </body>
 </html>
