--- a/html/uno.html
+++ b/html/uno.html
@@ -17,7 +17,7 @@
     <h2><font color="00FBFF" face="Times New Roman">Teléfono		: 4278-7181</h2> 
     </center>
 
-	<h2><font color="00FBFF" face="Castellar"><a href="index.html">Principal</a></font></h2> &nbsp;&nbsp;
+	<h2><font color="00FBFF" face="Castellar"><a href="principal.html">Principal</a></font></h2> &nbsp;&nbsp;
 	<h2><font color="00FBFF" face="Castellar"><a href="uno.html">Personales</a></font></h2> &nbsp;&nbsp;
 	<h2><font color="00FBFF" face="Castellar"><a href="dos.html">Estudios</a></font></h2> &nbsp;&nbsp;
 	<h2><font color="00FBFF" face="Castellar"><a href="tres.html">Capacitaciones</a></font></h2> &nbsp;&nbsp;
