--- a/html/tres.html
+++ b/html/tres.html
@@ -12,7 +12,7 @@
     <h2><font color="000EBD" face="Castellar">Capacitacion de la SAT : Regimen sobre los ingresos de actividaes lucrativas</font></h2> 
     <h2><font color="000EBD" face="Castellar">Capacitacion de la SAT : Regimen sobre utilidades de rentsas de actividades lucrativas</font></h2> 
 	
-	<h2><font color="FF0000" face="Times New Roman"><a href="index.html">Principal</a></font></h2> &nbsp;&nbsp;
+	<h2><font color="FF0000" face="Times New Roman"><a href=principal.html">Principal</a></font></h2> &nbsp;&nbsp;
 	<h2><font color="FF0000" face="Times New Roman"><a href="uno.html">Personales</a></font></h2> &nbsp;&nbsp;
 	<h2><font color="FF0000" face="Times New Roman"><a href="dos.html">Estudios</a></font></h2> &nbsp;&nbsp;
 	<h2><font color="FF0000" face="Times New Roman"><a href="tres.html">Capacitaciones</a></font></h2> &nbsp;&nbsp;
