--- a/html/dos.html
+++ b/html/dos.html
@@ -16,7 +16,7 @@
     <h2><font color="BD0000" face="Times New Roman">Carrera		: Instituto Profesional de Computación</h2>
     </center>
 
-	<h2><font color="FF0000" face="Times New Roman"><a href="index.html">Principal</a></font></h2> &nbsp;&nbsp;
+	<h2><font color="FF0000" face="Times New Roman"><a href="principal.html">Principal</a></font></h2> &nbsp;&nbsp;
 	<h2><font color="FF0000" face="Times New Roman"><a href="uno.html">Personales</a></font></h2> &nbsp;&nbsp;
 	<h2><font color="FF0000" face="Times New Roman"><a href="dos.html">Estudios</a></font></h2> &nbsp;&nbsp;
 	<h2><font color="FF0000" face="Times New Roman"><a href="tres.html">Capacitaciones</a></font></h2> &nbsp;&nbsp;
