--- a/html/cuatro.html
+++ b/html/cuatro.html
@@ -23,7 +23,7 @@
     	<li><font color="00FBFF" face="Algerian">Dirección	: El cuchitril 3-87 zona 3 Villa Nueva</font>
     </ul> 
 	<hr color="blue">
-	<h2><font color="FF0000" face="Times New Roman"><a href="index.html">Principal</a></h2> &nbsp;&nbsp;
+	<h2><font color="FF0000" face="Times New Roman"><a href="principal.html">Principal</a></h2> &nbsp;&nbsp;
 	<h2><font color="FF0000" face="Times New Roman"><a href="uno.html">Personales</a></h2> &nbsp;&nbsp;
 	<h2><font color="FF0000" face="Times New Roman"><a href="dos.html">Estudios</a></h2> &nbsp;&nbsp;
 	<h2><font color="FF0000" face="Times New Roman"><a href="tres.html">Capacitaciones</a></h2> &nbsp;&nbsp;
