--- a/html/uno.html
+++ b/html/uno.html
@@ -8,7 +8,7 @@
 	<center>
 	<h1><font color="00FBFF" face="Algerian">Información Personal</font></h1>
 	<h1><font color="00FBFF" face="Algerian">Diego Benjamin García Ambrocio</font></h1>
-	<img src="https://imgs.search.brave.com/exU7VpkOzMC52xVTaRT2vd8ZkZSFYGJT-p1Tk5EYn3Q/rs:fit:600:700:1/g:ce/aHR0cDovL2Nkbi5z/aG9waWZ5LmNvbS9z/L2ZpbGVzLzEvMDU3/Ny8zMzI1LzEyNTkv/ZmlsZXMvZXNjdWRv/X2M3YWUzYWUwLWQ2/M2MtNDhjNi1iZmU1/LWIzOGUyNzI5ZDk1/MC5wbmc_dj0xNjIz/OTc4NTc2" width="175" height="275">
+	<img src="" width="175" height="275">
 	<hr color="00FBFF">
      
     <h2><font color="00FBFF" face="Times New Roman">Mis nombre		: Diego Benjamin</h2> 
