--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 		<br><br>
 		Password: <input type="password" name="clave2" size="20">
 		<br><br>
-		<input type="button" value="Comprobar si son iguales" onClick="comprobarClave()">
+		<input type="button" class="btn btn-primary" value="Comprobar si son iguales" onClick="comprobarClave()">
 	</form>	
     </center>
 
