--- a/html/uno.html
+++ b/html/uno.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title> Esta es mi pagina de Información Personal</title>
-	<link rel="stylesheet" type="text/css" href="/conta/css/estilos.css">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body background-size: 100% background="https://imgs.search.brave.com/t5gTApndzcjEu7k99znmXm-63AvgWf9rKy4bTu27uU8/rs:fit:1200:1200:1/g:ce/aHR0cDovL3d3dy5l/bGd1aWxsZW1vbGEu/Y29tL2ltZy9FeGN1/cnNpb25hbGFTdHVw/YWRlS2FsYWNoYWty/YWVuVmVsZXpfMTFG/RDUvRFNDXzE1MjMz/X2xyLmpwZw" >
 	<center>
@@ -17,10 +17,28 @@
     <h2><font color="00FBFF" face="Times New Roman">Teléfono		: 4278-7181</h2> 
     </center>
 
-	<h2><font color="00FBFF" face="Castellar"><a href="principal.html">Principal</a></font></h2> &nbsp;&nbsp;
-	<h2><font color="00FBFF" face="Castellar"><a href="uno.html">Personales</a></font></h2> &nbsp;&nbsp;
-	<h2><font color="00FBFF" face="Castellar"><a href="dos.html">Estudios</a></font></h2> &nbsp;&nbsp;
-	<h2><font color="00FBFF" face="Castellar"><a href="tres.html">Capacitaciones</a></font></h2> &nbsp;&nbsp;
-	<h2><font color="00FBFF" face="Castellar"><a href="cuatro.html">Referencias</a></font></h2> &nbsp;&nbsp;    
+	<nav class="navbar bg-dark" data-bs-theme="dark">
+       <ul class="nav justify-content-center">
+         <li class="navbar-nav">
+           <div class="container-fluid">
+            <a class="nav-link active" aria-current="page" href="uno.html">Personales</a>
+           </div>        
+         </li>
+         <li class="navbar-nav">
+           <div class="container-fluid">
+            <a class="nav-link active" href="dos.html">Estudios</a>
+           </div>
+         </li>
+         <li class="navbar-nav">
+           <div class="container-fluid">
+            <a class="nav-link active" href="tres.html">Capacitaciones</a>
+           </div>
+         </li>
+         <li class="navbar-nav">
+           <div class="container-fluid">
+            <a class="nav-link active" href="cuatro.html">Referencias</a>
+           </div>
+         </li>
+       </ul>
 </body>
 </html>
