--- a/html/dos.html
+++ b/html/dos.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title> Esta es mi pagina de Estudios</title>
-	<link rel="stylesheet" type="text/css" href="css/estilos.css">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body background="https://imgs.search.brave.com/MoHdC0LzgnCj8aCxEW1B3EeQqUKmnY6YmOs0By3WhIA/rs:fit:1024:768:1/g:ce/aHR0cDovLzEuYnAu/YmxvZ3Nwb3QuY29t/Ly1fMHpOTnRGZU1J/VS9Uc1VycVBwd0FE/SS9BQUFBQUFBQUF4/by83MGZZY2lBMnRZ/VS9zMTYwMC9TcGlk/ZXJtYW5fRm9uZG9z/LWRlLVBhbnRhbGxh/LmpwZw">
 	<center>
@@ -16,11 +16,29 @@
     <h2><font color="BD0000" face="Times New Roman">Carrera		: Instituto Profesional de Computación</h2>
     </center>
 
-	<h2><font color="FF0000" face="Times New Roman"><a href="principal.html">Principal</a></font></h2> &nbsp;&nbsp;
-	<h2><font color="FF0000" face="Times New Roman"><a href="uno.html">Personales</a></font></h2> &nbsp;&nbsp;
-	<h2><font color="FF0000" face="Times New Roman"><a href="dos.html">Estudios</a></font></h2> &nbsp;&nbsp;
-	<h2><font color="FF0000" face="Times New Roman"><a href="tres.html">Capacitaciones</a></font></h2> &nbsp;&nbsp;
-	<h2><font color="FF0000" face="Times New Roman"><a href="cuatro.html">Referencias</a></font></h2> &nbsp;&nbsp;
+	<nav class="navbar bg-dark" data-bs-theme="dark">
+       <ul class="nav justify-content-center">
+         <li class="navbar-nav">
+           <div class="container-fluid">
+            <a class="nav-link active" aria-current="page" href="uno.html">Personales</a>
+           </div>        
+         </li>
+         <li class="navbar-nav">
+           <div class="container-fluid">
+            <a class="nav-link active" href="dos.html">Estudios</a>
+           </div>
+         </li>
+         <li class="navbar-nav">
+           <div class="container-fluid">
+            <a class="nav-link active" href="tres.html">Capacitaciones</a>
+           </div>
+         </li>
+         <li class="navbar-nav">
+           <div class="container-fluid">
+            <a class="nav-link active" href="cuatro.html">Referencias</a>
+           </div>
+         </li>
+       </ul>
      
 </body>
 </html>
