--- a/html/tres.html
+++ b/html/tres.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title> Esta es mi pagina de Capacitaciones</title>
-	<link rel="stylesheet" type="text/css" href="/conta/css/estilos.css">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body background="https://imgs.search.brave.com/s6OKAaBGNRTNwZXP2X-I65Uujqv-u8LWLb7cBGj2roU/rs:fit:1200:1200:1/g:ce/aHR0cHM6Ly9pbWFn/ZXMuYWxwaGFjb2Rl/cnMuY29tLzI1OC8y/NTgyMTEuanBn">
 	<h1><font color="000EBD" face="Castellar">Capacitaciones</font></h1>
@@ -12,11 +12,29 @@
     <h2><font color="000EBD" face="Castellar">Capacitacion de la SAT : Regimen sobre los ingresos de actividaes lucrativas</font></h2> 
     <h2><font color="000EBD" face="Castellar">Capacitacion de la SAT : Regimen sobre utilidades de rentsas de actividades lucrativas</font></h2> 
 	
-	<h2><font color="FF0000" face="Times New Roman"><a href=principal.html">Principal</a></font></h2> &nbsp;&nbsp;
-	<h2><font color="FF0000" face="Times New Roman"><a href="uno.html">Personales</a></font></h2> &nbsp;&nbsp;
-	<h2><font color="FF0000" face="Times New Roman"><a href="dos.html">Estudios</a></font></h2> &nbsp;&nbsp;
-	<h2><font color="FF0000" face="Times New Roman"><a href="tres.html">Capacitaciones</a></font></h2> &nbsp;&nbsp;
-	<h2><font color="FF0000" face="Times New Roman"><a href="cuatro.html">Referencias</a></font></h2> &nbsp;&nbsp;
+<nav class="navbar bg-dark" data-bs-theme="dark">
+       <ul class="nav justify-content-center">
+         <li class="navbar-nav">
+           <div class="container-fluid">
+            <a class="nav-link active" aria-current="page" href="uno.html">Personales</a>
+           </div>        
+         </li>
+         <li class="navbar-nav">
+           <div class="container-fluid">
+            <a class="nav-link active" href="dos.html">Estudios</a>
+           </div>
+         </li>
+         <li class="navbar-nav">
+           <div class="container-fluid">
+            <a class="nav-link active" href="tres.html">Capacitaciones</a>
+           </div>
+         </li>
+         <li class="navbar-nav">
+           <div class="container-fluid">
+            <a class="nav-link active" href="cuatro.html">Referencias</a>
+           </div>
+         </li>
+       </ul>
      
 
 </body>
