--- a/html/cuatro.html
+++ b/html/cuatro.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title> Esta es mi pagina de Referencias Personales</title>
-	<link rel="stylesheet" type="text/css" href="css/estilos.css">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body background="https://imgs.search.brave.com/2vRfD2Fqw4LGmUOY2Hi_774Zmt0VtHoruUAvTvYAB-8/rs:fit:1200:1000:1/g:ce/aHR0cDovLzEuYnAu/YmxvZ3Nwb3QuY29t/Ly0zWnAtR0VfYXdI/ay9VUGdCaVhEUENM/SS9BQUFBQUFBQXpx/QS91WEtsNVQ0VXp2/cy9zMTYwMC9MYS1M/dW5hLWRlc2RlLWVs/LUVzcGFjaW9fRm9u/ZG9zLUhELWRlbC1V/bml2ZXJzby5qcGc">
 	<center>
@@ -23,11 +23,29 @@
     	<li><font color="00FBFF" face="Algerian">Dirección	: El cuchitril 3-87 zona 3 Villa Nueva</font>
     </ul> 
 	<hr color="blue">
-	<h2><font color="FF0000" face="Times New Roman"><a href="principal.html">Principal</a></h2> &nbsp;&nbsp;
-	<h2><font color="FF0000" face="Times New Roman"><a href="uno.html">Personales</a></h2> &nbsp;&nbsp;
-	<h2><font color="FF0000" face="Times New Roman"><a href="dos.html">Estudios</a></h2> &nbsp;&nbsp;
-	<h2><font color="FF0000" face="Times New Roman"><a href="tres.html">Capacitaciones</a></h2> &nbsp;&nbsp;
-	<h2><font color="FF0000" face="Times New Roman"><a href="cuatro.html">Referencias</a></h2> &nbsp;&nbsp;
+	<nav class="navbar bg-dark" data-bs-theme="dark">
+       <ul class="nav justify-content-center">
+         <li class="navbar-nav">
+           <div class="container-fluid">
+            <a class="nav-link active" aria-current="page" href="uno.html">Personales</a>
+           </div>        
+         </li>
+         <li class="navbar-nav">
+           <div class="container-fluid">
+            <a class="nav-link active" href="dos.html">Estudios</a>
+           </div>
+         </li>
+         <li class="navbar-nav">
+           <div class="container-fluid">
+            <a class="nav-link active" href="tres.html">Capacitaciones</a>
+           </div>
+         </li>
+         <li class="navbar-nav">
+           <div class="container-fluid">
+            <a class="nav-link active" href="cuatro.html">Referencias</a>
+           </div>
+         </li>
+       </ul>
      
 </body>
 </html>
